--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -25,6 +25,7 @@
         <%if(editMode) {%>
           <input type="hidden" name="productId" value="<%= product._id %>">
         <%}%>
+        <input type="hidden" name="_csrf" value="<%= csrfToken%>">
         <button class="btn" type="submit"><%if (editMode) { %>Update Product<%}else{%>Add Product<%}%></button>
         </form>
     </main>
