--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -61,6 +61,7 @@
       <% } else { %>
       <li class="main-header_item ">
         <form action="/logout" method="post">
+          <input type="hidden" name="_csrf" value="<%= csrfToken%>">
           <button type="submit" class="nav_button">Logout</button>
         </form>
       </li>
