--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -14,6 +14,7 @@
         </div>
         <form action="/cart" method="POST">
         <input type="hidden" value="<%= product.id%>" name="productId">
+        <input type="hidden" name="_csrf" value="<%= csrfToken%>">
         <% if (isAuthenticated) {%>
             <button type="submit" class="btn">Add to Cart</button>
         <% } %>    
